scrollbar fixed + GAM started

--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -11,10 +11,10 @@ $overlay-light: mix($dark-grey, white, 86%);
   margin-left: 0 !important;
 }
 body::-webkit-scrollbar {
-    display: none;
+    border-left: 1px rgba(0,0,0,0.5) solid !important;
+    background-color: $overlay !important;
 }
 body {
-  scrollbar-width: none;
   margin-top: 55.95px !important;
   margin-bottom: 55.95px !important;
 }
